[package]
name = "whatamido"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.36", features = ["full"]}

google-calendar = "0.10.0"
yup-oauth2 = "12.1.2"

reqwest = {version = "0.13.2", features = ["json"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = {version = "0.4", features = ["serde"]}

clap = {version = "4.5", features = ["derive"]}
indicatif = "0.18.3"
notify-rust = "4.10"

anyhow = "1.0"
