[package]
name = "whatamido"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

yup-oauth2 = "8.3"

tokio = { version = "1.0", features = ["full"]}

reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
